--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -22,8 +22,8 @@
             <directory suffix=".php">src</directory>
         </whitelist>
     </filter>
-    <!--<logging>-->
-        <!--<log type="coverage-html" target="build/coverage" title="MiniUrl" highlight="true"/>-->
-        <!--<log type="coverage-clover" target="build/logs/clover.xml"/>-->
-    <!--</logging>-->
+    <logging>
+        <log type="coverage-html" target="build/coverage" title="MiniUrl" highlight="true"/>
+        <log type="coverage-clover" target="build/logs/clover.xml"/>
+    </logging>
 </phpunit>
