--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,18 @@
 {
-    "name": "mtymek/blast-skeleton",
+    "name": "mtymek/blast-view",
+    "description": "Template renderer using templating engine from Zend Framework 2 - Zend\\View.",
+    "keywords": [
+        "zend view",
+        "template",
+        "renderer",
+        "view helper",
+        "layout"
+    ],
     "require": {
-        "relay/relay": "~0.2",
         "zendframework/zend-servicemanager": "~2.5",
         "zendframework/zend-view": "~2.5",
         "zendframework/zend-escaper": "~2.5",
-        "zendframework/zend-filter": "~2.5",
-        "nikic/fast-route": "~0.6"
+        "zendframework/zend-filter": "~2.5"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.7"
@@ -21,6 +27,11 @@
     "autoload": {
         "psr-4": {
             "Blast\\View\\": "src"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "BlastTest\\View\\": "test"
         }
     }
 }
